--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,8 +25,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    compile 'me.dm7.barcodescanner:zxing:1.9'
-    compile 'de.keyboardsurfer.android.widget:crouton:1.8.5@aar'
-    compile 'com.jakewharton:butterknife:8.8.1'
+    implementation 'me.dm7.barcodescanner:zxing:1.9'
+    implementation 'de.keyboardsurfer.android.widget:crouton:1.8.5@aar'
+    implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 }
